--- a/flights/templates/schedule_form.html
+++ b/flights/templates/schedule_form.html
@@ -11,7 +11,7 @@
         <select id="schedule-flight" name="flight_id">
             {% for flight in flights %}
                 {% if flight.flId == schedule.flId.flId %}
-                <option selected="{{flight.flId}}">{{flight.flId}} {{flight.fromAp}} đến {{flight.toAp}} - {{flight.brand}}</option>
+                <option selected value="{{flight.flId}}">{{flight.flId}} {{flight.fromAp}} đến {{flight.toAp}} - {{flight.brand}}</option>
                 {% else %}
                 <option value="{{flight.flId}}">{{flight.flId}} {{flight.fromAp}} đến {{flight.toAp}} - {{flight.brand}}</option>
                 {% endif %}
@@ -22,9 +22,9 @@
     <div class="form__group">
         <label for="departure_date">Ngày khởi hành</label>
         {% if page == 'update' %}
-        <input type="date" name="departure_date" value="{{schedule.date|date:'Y-m-d'}}" min="">
+        <input type="date" name="departure_date" value="{{schedule.date|date:'Y-m-d'}}">
         {% else %}
-        <input type="date" name="departure_date" value="{{cur_date|date:'Y-m-d'}}" min="">
+        <input type="date" name="departure_date" value="{{current_date|date:'Y-m-d'}}">
         {% endif %}
     </div>
     <div class="form__group">
@@ -48,10 +48,20 @@
     <div class="form__action">
         <a class="btn btn--dark" href="{{request.META.HTTP_REFERER}}">Hủy</a>
         {% if page == 'update' %}
-        <button class="btn btn--main" type="submit">Cập nhật</button>
+        <button class="btn btn--main" type="submit" onclick="notify()">Cập nhật</button>
         {% else %}
-        <button class="btn btn--main" type="submit">Tạo chuyến bay</button>
+        <button class="btn btn--main" type="submit" onclick="notify1()">Tạo lịch bay</button>
         {% endif %}
 </form>
 
 {% endblock content %}
+
+<script>
+    function notify() {
+      alert("Cập nhật thành công!");
+    }
+    function notify1(){
+        alert("Tạo thành công!");
+        
+    }
+</script>
