--- a/flights/templates/customer_form.html
+++ b/flights/templates/customer_form.html
@@ -31,20 +31,25 @@
       <a class="nav-item" href="">Cập nhật chuyến bay</a>
     </div>
     
-    <form form action="" id="cf" class="shadow">
+ 
+
+    <form form action="" id="cf" class="shadow" method="POST">
+      {% csrf_token %}
       <div class="row">
-        <p class="bold">Thông tin hành khách</p>
+        <p class="bold">Thông tin hành khách {{stt}} </p>
       </div>
       <div class="half left cf">
-        <input type="text" id="input-name" placeholder="Name">
-        <input type="email" id="input-email" placeholder="Email address">
-        <input type="text" id="input-subject" placeholder="Subject">
+        <input type="text" id="input-name" placeholder="Mã khách hàng" name="customerID">
+        <input type="text" id="input-email" placeholder="Tên" name="name">
+        <input type="text" id="input-subject" placeholder="Sdt" name="sdt">
       </div>
-      <div class="half right cf">
+      <!-- <div class="half right cf">
         <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
-      </div>
+      </div> -->
       <input type="submit" value="Submit" id="input-submit">
     </form>
+
+
     <!-- <div>
       <form id="cf" method="POST" action="">
         {% csrf_token %} {{form.as_p}}
