--- a/flights/templates/customer_form.html
+++ b/flights/templates/customer_form.html
@@ -26,12 +26,14 @@
 <body>
   <div class="banner banner2">
     <div class="navbar">
-      <a class="nav-item" href={% url 'index' %}>Đặt vé</a>
+      <a class="nav-item active" href={% url 'index' %}>Đặt vé</a>
       <a class="nav-item" href="">Báo cáo</a>
-      <a class="nav-item" href="">Cập nhật chuyến bay</a>
+      <a class="nav-item" href="{% url 'flight_list' %}">Chuyến bay</a>
+      <a class="nav-item" href="{% url 'flight_list' %}">Lịch bay</a>
+      <a class="nav-item" href="{% url 'create_user' %}">Tạo tài khoản</a>
     </div>
     
-    <form form action="" id="cf" class="shadow">
+    <!-- <form form action="" id="form_fl_list" class="shadow">
       <div class="row">
         <p class="bold">Thông tin hành khách</p>
       </div>
@@ -44,14 +46,26 @@
         <textarea name="message" type="text" id="input-message" placeholder="Message"></textarea>
       </div>
       <input type="submit" value="Submit" id="input-submit">
+    </form> -->
+    <form method="POST" action=""  id="form-update-fl">
+      {% csrf_token %}
+      
+      <label class="form-label" for="ticket_schedule">Mã hành khách</label>
+      <input class="form-control" required type="text" name="customerID"/>
+      
+      <label class="form-label" for="ticket_schedule">Tên hành khách</label>
+      <input class="form-control" required type="text" name="name"/>
+      
+      <label class="form-label" for="ticket_schedule">Số điện thoại</label>
+      <input class="form-control" required type="text" name="sdt"/>
+      
+      
+      <div class="row">
+        <a class="btn mx-auto"  href={% url 'ticket' %}>Thêm vé</a>
+      </div>
+      
     </form>
-    <!-- <div>
-      <form id="cf" method="POST" action="">
-        {% csrf_token %} {{form.as_p}}
-        <input type="Submit" value="Submit" />
-      </form>
-    </div>
-  </div> -->
+  
 
 </body>
 
