--- a/flights/templates/schedule_detail.html
+++ b/flights/templates/schedule_detail.html
@@ -19,9 +19,15 @@
 <body>
     <div class="banner banner2">
         <div class="navbar">
-            <a class="nav-item" href={% url 'index' %}>Đặt vé</a>
+            <a class="nav-item active" href={% url 'index' %}>Đặt vé</a>
             <a class="nav-item" href="">Báo cáo</a>
-            <a class="nav-item" href="">Cập nhật chuyến bay</a>
+  
+         
+                 
+                    <a class="nav-item" href="{% url 'flight_list' %}">Chuyến bay</a>
+                    <a class="nav-item" href="{% url 'flight_list' %}">Lịch bay</a>
+                    <a class="nav-item" href="{% url 'create_user' %}">Tạo tài khoản</a>
+           
         </div>
         <form action="" id="form-detail" class="shadow">
             <div class="row">
@@ -101,7 +107,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col text-center">
                     <a href="{% url 'create_customer' pk  %}"> Đặt vé</a>
                 </div>
             </div>
