--- a/flights/templates/flight_list.html
+++ b/flights/templates/flight_list.html
@@ -32,7 +32,9 @@
                     style="border-radius:100%;">
             </a> -->
             <!-- <br><br> -->
-            <a href="{% url 'add_flight' %}">Tạo chuyến bay</a>
+            <div class="row">
+            <button style="width: fit-content; margin: auto;"> <a  href="{% url 'add_flight' %}">Tạo chuyến bay</a></button>
+            </div>
             <br><br>
             <table class="table table-bordered table1">
             <thead>
@@ -41,7 +43,7 @@
 
                     <th scope="col">Nơi đi</th>
                     <th scope="col">Nơi đến</th>
-                    <th scope="col">Thời gian bay tối thiểu</th>
+                    <th scope="col">Thời gian bay tối thiểu </th>
                     <th scope="col">Hãng</th>
                     <th scope="col"></th>
                 </tr>
