--- a/flights/templates/ticket.html
+++ b/flights/templates/ticket.html
@@ -1,4 +1,4 @@
-<a href="{% url 'index'  %}"> Home</a>
+<!-- <a href="{% url 'index'  %}"> Home</a>
 <br>
 {% for ticket in tickets %}
 
@@ -6,4 +6,70 @@
     <a href="{% url 'update_ticket' ticket.ticketId %}"> Update</a>
     <a href="{% url 'delete_ticket' ticket.ticketId  %}"> Delete</a>
     <br>
-{% endfor %}
+{% endfor %} -->
+
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static '/assets/css/styte.css' %}">
+    <title>Document</title>
+</head>
+
+
+<header>
+</header>
+
+<body>
+    <div class="banner banner2">
+        <div class="navbar">
+            <a class="nav-item active" href={% url "index" %}>Đặt vé</a>
+            <a class="nav-item" href="">Báo cáo</a>
+            <a class="nav-item" href="{% url 'flight_list' %}">Chuyến bay</a>
+            <a class="nav-item" href="{% url 'flight_list' %}">Lịch bay</a>
+            <a class="nav-item" href="{% url 'create_user' %}">Tạo tài khoản</a>
+        </div>
+
+        <form form action="" id="form_fl_list" class="shadow">
+          
+            <table class="table table-bordered table1">
+            <thead>
+                <tr>
+                    <th scope="col">Mã chuyến bay</th>
+
+                    <th scope="col">Nơi đi</th>
+                    <th scope="col">Nơi đến</th>
+                    <th scope="col">Thời gian bay </th>
+                    <th scope="col">Tên khách hàng</th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for ticket in tickets %}
+
+                <tr>
+                    <td>{{ticket.ticketId}}</td>
+                    <td>{{ticket.schedule.flId.fromAp.apName}}</td>
+                    <td>{{ticket.schedule.flId.toAp.apName}}</td>
+                    <td>{{ticket.schedule.date}}</td>
+                    <td>{{ticket.customID.name}}</td>
+                    <td><a href="{% url 'update_ticket' ticket.ticketId %}">Cập nhật</a></td>
+                    <td><a href="{% url 'delete_ticket' ticket.ticketId  %}">Xóa</a></td>
+
+                </tr>
+                <!-- <br> -->
+                {% endfor %}
+            </tbody>
+            </table>
+        </form>
+
+</body>
+
+</html>
