--- a/flights/templates/update_flight.html
+++ b/flights/templates/update_flight.html
@@ -30,12 +30,12 @@
       {% csrf_token %}
       <h3>Cập nhật chuyến bay số hiệu {{flight.flId}}</h3>
 
-      <label>Cập nhật sân bay đi: </label>
-      <input type="text" required list="airport_list" name="fromAp" value="{{flight.fromAp.apName}}">
+      <label class="form-label">Cập nhật sân bay đi: </label>
+      <input class="form-control" type="text" required list="airport_list" name="fromAp" value="{{flight.fromAp.apName}}">
       <br><br>
 
-      <label>Cập nhật sân bay đến: </label>
-      <input type="text" required list="airport_list" name="toAp" value="{{flight.toAp.apName}}">
+      <label class="form-label">Cập nhật sân bay đến: </label>
+      <input class="form-control" type="text" required list="airport_list" name="toAp" value="{{flight.toAp.apName}}">
 
       <datalist id="airport_list">
         {% for airport in airports %}
@@ -44,8 +44,8 @@
       </datalist>
       <br><br>
 
-      <label for="flight_time">Thời gian bay (tối thiểu 1): </label>
-      <input type="number" id="flight_time" min="1" required name="flight_time" value="{{flight.flTime}}">
+      <label for="flight_time" class="form-label">Thời gian bay (tối thiểu 1): </label>
+      <input class="form-control" type="number" id="flight_time" min="1" required name="flight_time" value="{{flight.flTime}}">
       <br><br>
 
       <div class="form__action">
