--- a/flights/templates/user_form.html
+++ b/flights/templates/user_form.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 {% load static %}
 <html lang="en">
 
@@ -15,34 +15,133 @@
 
 <header>
      
-            <div class="banner banner2">
-                <div class="navbar">
-                    <a class="nav-item" href={% url "index" %}>Đặt vé</a>
-                    <a class="nav-item" href="">Báo cáo</a>
-                    <a class="nav-item" href="{% url 'flight_list' %}">Danh sách chuyến bay</a>
-                    <a class="nav-item active" href="{% url 'create_user' %}">Tạo tài khoản</a>
-                </div>
-            </div>
-            <div>
-              <form method="POST" action="">
-                {% csrf_token %} 
-                {{user_form.as_p}}
-                <input onclick="notify()" type="Submit" value="Submit" />
-              </form>
-          </div>
-          <script>
-            function notify() {
-              alert("User created!");
-            }
-            </script>
+            
 
 </header>
 <body>
     
-    {% block content%}
-
-    {% endblock %}
+  <div class="banner banner2">
+    <div class="navbar">
+        <a class="nav-item" href={% url "index" %}>Đặt vé</a>
+        <a class="nav-item" href="">Báo cáo</a>
+        <a class="nav-item" href="{% url 'flight_list' %}">Danh sách chuyến bay</a>
+        <a class="nav-item active" href="{% url 'create_user' %}">Tạo tài khoản</a>
+    </div>
+</div>
+<div>
+  <form method="POST" action="">
+    {% csrf_token %} 
+    {{user_form.as_p}}
+    <input onclick="notify()" type="Submit" value="Submit" />
+  </form>
+  
+</div>
+<script>
+function notify() {
+  alert("User created!");
+}
+</script>
 
 </body>
 
 </html>
+ --> 
+
+
+ <!-- <div>
+    <form method="POST" action="">
+      {% csrf_token %} {{form.as_p}}
+      <input type="Submit" value="Submit" />
+    </form>
+  </div> -->
+
+<!DOCTYPE html>
+{% load static %}
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static '/assets/css/styte.css' %}">
+  <title>Document</title>
+</head>
+
+
+<header>
+</header>
+
+<body>
+  <div class="banner banner2">
+    <div class="navbar">
+      <a class="nav-item" href={% url 'index' %}>Đặt vé</a>
+      <a class="nav-item" href="">Báo cáo</a>
+     
+            <a class="nav-item" href="{% url 'flight_list' %}">Chuyến bay</a>
+            <a class="nav-item" href="{% url 'flight_list' %}">Lịch bay</a>
+            <a class="nav-item active" href="{% url 'create_user' %}">Tạo tài khoản</a>
+     
+    </div>
+    
+    <!-- <form method="POST" action=""  id="form-update-fl">
+      
+      
+      <label class="form-label" for="ticket_schedule">Tên đăng nhập</label>
+      <input class="form-control" required type="text" name="username"/>
+      
+      <label class="form-label" for="ticket_schedule">Mật khẩu</label>
+      <input class="form-control" required type="text" name="password"/>
+      
+      <label class="form-label" for="ticket_schedule">Họ tên</label>
+      <input class="form-control" required type="text" name="name"/>
+      
+      
+      <div class="row">
+        <input class="btn mx-auto" type="Submit" value="Submit" />
+      </div>
+      
+    </form> -->
+    <div>
+      <form method="POST" action="" id="form-update-fl">
+        {% csrf_token %}
+        <label class="form-label" for="">Nhập tên đăng nhập</label>
+        <input class="form-control type="text" required name="username" id="username">
+        <label class="form-label" for="">Nhập mật khẩu</label>
+        <input class="form-control type="password" required name="password" id="password">
+        <label class="form-label" for="">Nhập lại mật khẩu</label>
+        <input class="form-control type="password" required name="password2" id="password2" onkeyup="check()">
+        <span id="message"></span><br><br>
+        <label class="form-label" for="">Nhập tên người dùng</label>
+        <input class="form-control type="text" required name="name" id="name">
+
+        <div class="form__action">
+          <a class="btn btn--dark" href={% url 'main' %}>Hủy</a>
+          <button class="btn btn--main" type="submit" >Tạo</button>
+        </div>
+
+      </form>
+  </div>
+  <script>
+    function notify() {
+      alert("Đã tạo người dùng");
+    }
+    var check = function() {
+    if (document.getElementById('password').value ==
+      document.getElementById('password2').value) {
+        document.getElementById('message').style.color = 'green';
+        document.getElementById('message').innerHTML = 'Khớp';
+      } else {
+        document.getElementById('message').style.color = 'red';
+      document.getElementById('message').innerHTML = 'không khớp';
+      }
+    }
+  </script>
+
+  </div>
+
+</body>
+
+</html>
+
